# akasha

./: .gitignore  AGENTS.md  Cargo.toml  README.md  SESSION_NOTES.md  akasha_backend_review.html  concept.md  config.example.toml  generate_test_noise.py  run-gpu.sh  viewer_and_gallery_tweaks.md
.github/workflows/: nightly.yml
.kimi/: BACKLOG.md
.superpowers/: pr_body.md
docs/superpowers/plans/: 2026-06-27-backend-agnostic-model-plugins.md  2026-06-27-candle-integration.md  2026-06-28-model-tweaks-properties-fts5.md  2026-06-29-mistralrs-description-backend.md  2026-06-29-vlm-description-hookup.md
docs/superpowers/specs/: 2026-06-27-backend-agnostic-model-plugins-design.md  2026-06-27-candle-integration-design.md  2026-06-27-model-tweaks-properties-fts5-design.md  2026-06-28-model-tweaks-properties-fts5-design.md  2026-06-29-vlm-description-design.md
migrations/: 001_initial.sql  002_folder_tree.sql  003_scan_complete.sql  004_indexes.sql  005_covering_index.sql  006_searchable_configs.sql  007_searchable_values.sql  008_seed_filename_searchable.sql  009_job_queue.sql  010_import_config.sql  011_fix_flatten_migration.sql  012_drop_flatten.sql  013_missing_files.sql  014_generic_job_queue.sql  015_searchable_columns.sql  016_searchable_configs_updated_at.sql  017_searchable_tags_fts.sql  018_fts_tags_backfill.sql
scripts/: regenerate_imports.py
src/: app.rs  config.rs  image_loader.rs  main.rs  scanner.rs  theme.rs  thumbnailer.rs  watcher.rs
src/db/: folder.rs  media.rs  mod.rs  searchable.rs
src/models/: candle.rs  jtp3.rs  loader.rs  mistralrs.rs  mod.rs  onnx.rs  preprocess.rs  remote.rs  stub.rs  tagger.rs  worker.rs
src/models/candle/: mod.rs
src/models/candle/vlm/: blip.rs  gemma4.rs  mod.rs  token_stream.rs
src/searchables/: description.rs  engine.rs  filename.rs  mod.rs  tags.rs  worker.rs
src/ui/: browser.rs  context_menu.rs  media_processing.rs  mod.rs  properties.rs  settings.rs  viewer.rs  widgets.rs
