[package]
name = "akasha"
version = "0.1.0"
edition = "2024"

[features]
default = ["simd-thumbnails", "remote", "candle", "onnx"]
hevc = ["dep:libheif-rs"]
simd-thumbnails = ["dep:fast_image_resize", "dep:webp"]
hf-hub = ["dep:hf-hub", "dep:openssl"]
candle = ["dep:candle-core", "dep:candle-nn", "dep:candle-transformers", "dep:tokenizers"]
mistralrs = ["dep:mistralrs", "dep:openssl"]
remote = ["dep:reqwest", "dep:base64"]
onnx = ["dep:ort", "dep:ndarray", "dep:csv", "dep:safetensors", "dep:kamadak-exif", "dep:qcms", "dep:half"]
cuda = ["candle", "candle-core/cuda", "mistralrs?/cuda"]

[dependencies]
# UI
eframe = { version = "0.31", features = ["default"] }
egui_extras = { version = "0.31", features = ["image"] }

# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync"] }

# Async trait support (used by Searchables abstraction)
async-trait = "0.1"

# Database
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio", "chrono", "json"] }

# Config & serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# egui is re-exported by eframe, but we use it directly in some modules
egui = "0.31"

# Image processing
image = { version = "0.25", default-features = false, features = [
    "png", "jpeg", "webp", "gif", "bmp", "tiff"
] }

# File hashing
blake3 = "1.5"

# Directory traversal
walkdir = "2"

# Blacklist glob patterns
globset = "0.4"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1"

# XDG directories
directories = "6"

# URL/file URI construction
url = "2"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# HEVC support (optional, requires libheif-dev and libde265-dev).
# Enables HEIF/HEIC images now; will enable HEVC video in MP4 when video support lands.
libheif-rs = { version = "2.7", optional = true, default-features = false, features = ["v1_17", "image"] }

# File system watching (Phase 2)
notify = "8"
notify-debouncer-full = "0.5"

# Async stream utilities (used by sqlx streaming queries)
futures-util = { version = "0.3.32", default-features = false, features = ["std"] }

# SIMD-optimized thumbnail generation (optional)
fast_image_resize = { version = "6.0.0", default-features = false, features = ["std"], optional = true }
webp = { version = "0.3.1", optional = true }

# Local inference (opt-in)
candle-core = { version = "0.11.0", optional = true }
candle-nn = { version = "0.11.0", optional = true }
candle-transformers = { version = "0.11.0", optional = true }
hf-hub = { version = "0.4", default-features = false, features = ["ureq", "native-tls"], optional = true }
tokenizers = { version = "0.22", default-features = false, features = ["onig"], optional = true }

# Remote inference (opt-in)
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"], optional = true }
base64 = { version = "0.22", optional = true }

# ONNX inference (default)
ort = { version = "2.0.0-rc.12", default-features = false, features = ["std", "ndarray", "download-binaries", "copy-dylibs", "tls-rustls", "half"], optional = true }
ndarray = { version = "0.17", features = ["std"], optional = true }
csv = { version = "1.3", optional = true }
safetensors = { version = "0.5", optional = true, default-features = false, features = ["std"] }
kamadak-exif = { version = "0.6", optional = true }
qcms = { version = "0.3", optional = true, default-features = false, features = ["iccv4-enabled"] }
half = { version = "2", optional = true }

# mistral.rs local inference (optional)
mistralrs = { version = "0.8.1", optional = true }

# Static OpenSSL for hf-hub / mistral.rs on Linux
openssl = { version = "0.10", features = ["vendored"], optional = true }

[dev-dependencies]
tempfile = "3"
